objects/emptracing__AssessmentStatusMappings__mdt.object
<CustomObject>
    <description>The Assessment Status Mapping custom metadata type allows you to configure the mapping of the status between the Assessment Status and the Status Group fields</description>
    <fields>
        <fullName>emptracing__AssessmentStatus__c</fullName>
        <description>The value of the status field for the employee in the Crisis Assessment object</description>
        <label>Assessment Status</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>emptracing__EnableContactTracing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select the checkbox to enable contract tracing</description>
        <label>Enable Contact Tracing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>emptracing__StatusGroup__c</fullName>
        <description>The value of the status field for the employee in the Crisis Assessment object</description>
        <label>Status Group</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Assessment Status Mapping</label>
    <pluralLabel>Assessment Status Mappings</pluralLabel>
</CustomObject>